// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`operations selectors  - contact 1`] = `
Object {
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  "lastSeen": "2019-03-07T13:03:48.000Z",
  "messages": Array [
    Array [
      Object {
        "blockTime": 9007199254740991,
        "createdAt": 1551963828,
        "id": 0,
        "isUnregistered": false,
        "message": "This is a message with id 0",
        "offerOwner": "",
        "publicKey": null,
        "sender": Object {
          "replyTo": "",
          "username": "",
        },
        "signature": Object {
          "data": Array [
            59,
            195,
            111,
            252,
            183,
            89,
            250,
            249,
            171,
            88,
            203,
            186,
            223,
            59,
            3,
            244,
            206,
            109,
            63,
            68,
            12,
            126,
            184,
            253,
            129,
            186,
            51,
            230,
            194,
            143,
            218,
            215,
            42,
            164,
            36,
            252,
            23,
            151,
            226,
            110,
            156,
            146,
            63,
            195,
            34,
            213,
            137,
            220,
            109,
            127,
            3,
            223,
            201,
            175,
            206,
            44,
            250,
            0,
            132,
            82,
            196,
            190,
            253,
            102,
          ],
          "type": "Buffer",
        },
        "spent": "0.32",
        "tag": "",
        "type": 1,
      },
      Object {
        "blockTime": 9007199254740991,
        "createdAt": 1551956628,
        "id": 1,
        "isUnregistered": false,
        "message": "This is a message with id 1",
        "offerOwner": "",
        "publicKey": null,
        "sender": Object {
          "replyTo": "",
          "username": "",
        },
        "signature": Object {
          "data": Array [
            34,
            14,
            37,
            27,
            56,
            163,
            111,
            87,
            76,
            223,
            43,
            110,
            65,
            27,
            73,
            254,
            246,
            147,
            66,
            102,
            51,
            165,
            41,
            206,
            169,
            238,
            227,
            171,
            4,
            139,
            132,
            236,
            76,
            192,
            215,
            65,
            40,
            100,
            213,
            19,
            126,
            48,
            126,
            60,
            90,
            134,
            24,
            118,
            148,
            16,
            38,
            9,
            45,
            253,
            123,
            128,
            199,
            58,
            177,
            108,
            81,
            40,
            51,
            88,
          ],
          "type": "Buffer",
        },
        "spent": "0.32",
        "tag": "",
        "type": 1,
      },
    ],
  ],
  "newMessages": Array [
    1,
    2,
    3,
    4,
  ],
  "username": "Wenus",
}
`;

exports[`operations selectors  - contacts 1`] = `
Object {
  "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq": Object {
    "address": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
    "username": "Mars",
  },
  "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya": Object {
    "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "messages": Array [
      Array [
        Object {
          "blockTime": 9007199254740991,
          "createdAt": 1551963828,
          "id": 0,
          "isUnregistered": false,
          "message": "This is a message with id 0",
          "offerOwner": "",
          "publicKey": null,
          "sender": Object {
            "replyTo": "",
            "username": "",
          },
          "signature": Object {
            "data": Array [
              59,
              195,
              111,
              252,
              183,
              89,
              250,
              249,
              171,
              88,
              203,
              186,
              223,
              59,
              3,
              244,
              206,
              109,
              63,
              68,
              12,
              126,
              184,
              253,
              129,
              186,
              51,
              230,
              194,
              143,
              218,
              215,
              42,
              164,
              36,
              252,
              23,
              151,
              226,
              110,
              156,
              146,
              63,
              195,
              34,
              213,
              137,
              220,
              109,
              127,
              3,
              223,
              201,
              175,
              206,
              44,
              250,
              0,
              132,
              82,
              196,
              190,
              253,
              102,
            ],
            "type": "Buffer",
          },
          "spent": "0.32",
          "tag": "",
          "type": 1,
        },
        Object {
          "blockTime": 9007199254740991,
          "createdAt": 1551956628,
          "id": 1,
          "isUnregistered": false,
          "message": "This is a message with id 1",
          "offerOwner": "",
          "publicKey": null,
          "sender": Object {
            "replyTo": "",
            "username": "",
          },
          "signature": Object {
            "data": Array [
              34,
              14,
              37,
              27,
              56,
              163,
              111,
              87,
              76,
              223,
              43,
              110,
              65,
              27,
              73,
              254,
              246,
              147,
              66,
              102,
              51,
              165,
              41,
              206,
              169,
              238,
              227,
              171,
              4,
              139,
              132,
              236,
              76,
              192,
              215,
              65,
              40,
              100,
              213,
              19,
              126,
              48,
              126,
              60,
              90,
              134,
              24,
              118,
              148,
              16,
              38,
              9,
              45,
              253,
              123,
              128,
              199,
              58,
              177,
              108,
              81,
              40,
              51,
              88,
            ],
            "type": "Buffer",
          },
          "spent": "0.32",
          "tag": "",
          "type": 1,
        },
      ],
    ],
    "newMessages": Array [
      1,
      2,
      3,
      4,
    ],
    "username": "Wenus",
  },
}
`;

exports[`operations selectors  - direct messages 1`] = `
Object {
  "blockedUsers": Array [],
  "channelModerators": Array [],
  "messsagesToRemove": Array [],
  "visibleMessages": undefined,
}
`;

exports[`operations selectors  - lastSeen 1`] = `"2019-03-07T13:03:48.000Z"`;

exports[`operations selectors  - messages 1`] = `
Array [
  Array [
    Object {
      "blockTime": 9007199254740991,
      "createdAt": 1551963828,
      "id": 0,
      "isUnregistered": false,
      "message": "This is a message with id 0",
      "offerOwner": "",
      "publicKey": null,
      "sender": Object {
        "replyTo": "",
        "username": "",
      },
      "signature": Object {
        "data": Array [
          59,
          195,
          111,
          252,
          183,
          89,
          250,
          249,
          171,
          88,
          203,
          186,
          223,
          59,
          3,
          244,
          206,
          109,
          63,
          68,
          12,
          126,
          184,
          253,
          129,
          186,
          51,
          230,
          194,
          143,
          218,
          215,
          42,
          164,
          36,
          252,
          23,
          151,
          226,
          110,
          156,
          146,
          63,
          195,
          34,
          213,
          137,
          220,
          109,
          127,
          3,
          223,
          201,
          175,
          206,
          44,
          250,
          0,
          132,
          82,
          196,
          190,
          253,
          102,
        ],
        "type": "Buffer",
      },
      "spent": "0.32",
      "tag": "",
      "type": 1,
    },
    Object {
      "blockTime": 9007199254740991,
      "createdAt": 1551956628,
      "id": 1,
      "isUnregistered": false,
      "message": "This is a message with id 1",
      "offerOwner": "",
      "publicKey": null,
      "sender": Object {
        "replyTo": "",
        "username": "",
      },
      "signature": Object {
        "data": Array [
          34,
          14,
          37,
          27,
          56,
          163,
          111,
          87,
          76,
          223,
          43,
          110,
          65,
          27,
          73,
          254,
          246,
          147,
          66,
          102,
          51,
          165,
          41,
          206,
          169,
          238,
          227,
          171,
          4,
          139,
          132,
          236,
          76,
          192,
          215,
          65,
          40,
          100,
          213,
          19,
          126,
          48,
          126,
          60,
          90,
          134,
          24,
          118,
          148,
          16,
          38,
          9,
          45,
          253,
          123,
          128,
          199,
          58,
          177,
          108,
          81,
          40,
          51,
          88,
        ],
        "type": "Buffer",
      },
      "spent": "0.32",
      "tag": "",
      "type": 1,
    },
  ],
]
`;

exports[`operations selectors  - newMessages 1`] = `
Array [
  1,
  2,
  3,
  4,
]
`;
